feat: add checking for event registration
