# backend/src/routes/v1/events/index.ts
@@ -11,4 +11,7 @@ router
   .post(auth(), validate(eventsValidation.create), eventController.create)
   .get(validate(eventsValidation.get), eventController.get);
 
+router.get("/my", auth(), eventController.getEventsOfUser);
+router.get("/with-checked", auth(), validate(eventsValidation.get), eventController.getChecked);
+
 export default router;
